--- a/PawsClaws/Pages/About.cshtml
+++ b/PawsClaws/Pages/About.cshtml
@@ -6,6 +6,7 @@
 
 
 <style>
+
     .wrapper-class {
         width: 100%;
         margin-top: 0px;
@@ -26,6 +27,11 @@
         padding-left: 5%;
         padding-right: 5%;
         text-align: center;
+    }
+
+    #main-row{
+        padding-left: 5%;
+        padding-right: 5%;
     }
 
     #story-wrapper{
@@ -55,6 +61,14 @@
         width: 100%;
     }
 
+    .adoption-image{
+        width:50%;
+    }
+
+    .adoption-description{
+        text-align:left;
+    }
+
     h1 {
         font-family:'Times New Roman', Times, serif;
         font-size: 65px;
@@ -75,7 +89,7 @@
 
     <div class="inner-wrapper">
         <div class="justify-content-sm-center">
-            <div class="flex-sm-row">
+            <div  id="main-row" class="flex-sm-row">
 
                 <div class="flex-sm-row">
                     <div class="flex-sm-column">
@@ -128,14 +142,81 @@
                     </div>
                 </div>
 
-                <div class="flex-sm-row">
-                    <div class="flex-sm-column">
-                        <div class="call-to-action">
-                            <div class="inner-call-to-action">
-                                <h2>Interested in Volunteering? </h2>
+                <div class="row">                
+                        <div class="col-md-6">
+                            <div class="flex-sm-row">
+                                <div class="flex-sm-column">
+                                    <div class="call-to-action">
+                                        <div class="inner-call-to-action">
+                                            <h2>Interested in Volunteering? </h2>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="flex-sm-row">
+                                <div class="flex-sm-column">
+                                    <div class="justify-content-md-start">
+                                        <div class="adoption-image">
+                                            <img src="https://scontent-dfw5-2.xx.fbcdn.net/v/t1.0-9/69774076_2386047874782572_6903459831470882816_n.jpg?_nc_cat=105&_nc_ohc=Zmhi3Cn9-_wAQk-KnmqGZnbO_QtfoNpeqq_NhMO8vttTbHjeDcWvGwDEQ&_nc_ht=scontent-dfw5-2.xx&oh=7ae9ad1c8e6a170e1b58d71bb425666a&oe=5E81BF23" class="img-fluid" />
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="flex-sm-row">
+                                <div class="flex-sm-column">
+                                    <div class="justify-content-md-start">
+                                        <div class="adoption-description">
+                                            <p>
+                                                We are always looking for people who are enthusiastic and passionante about helping animals.
+                                                We need all the help we can get. If you are interested in volunteering, please click the link below to learn more or email us at
+                                                <a href="mailto:nicholaspethaven@yahoo.com">nicholaspethaven@yahoo.com</a>
+                                            </p>
+                                            <a href="https://m.me/nicholaspethaven"><h3>Learn More</h3></a>
+
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
-                    </div>
+
+                        <div class="col-md-6">
+                            <div class="flex-sm-row">
+                                <div class="flex-sm-column">
+                                    <div class="call-to-action">
+                                        <div class="inner-call-to-action">
+                                            <h2>Got Adoption? </h2>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            
+                            <div class="flex-sm-row">
+                                <div class="flex-sm-column">
+                                    <div class="justify-content-md-start">
+                                        <div class="adoption-image">
+                                            <img src="https://scontent-dfw5-2.xx.fbcdn.net/v/t1.0-9/78705285_2555677227819635_4412491100300771328_n.jpg?_nc_cat=109&_nc_ohc=YQGCWNWOYUgAQknmeBqjtOvg4hC0a0lNt35PiuEADovWWrVT85aj2Ryog&_nc_ht=scontent-dfw5-2.xx&oh=33d219e6f4a708e17bcbf53ec1f9307d&oe=5E8A9C62" class="img-fluid" />
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="flex-sm-row">
+                                <div class="flex-sm-column">
+                                    <div class="justify-content-md-start">
+                                        <div class="adoption-description">
+                                            <p>
+                                                We need passionate and caring owners for our cats and dogs.
+                                                If you you are interested, please click the link below and fill out an application.
+                                            </p>
+                                            <a href="https://l.facebook.com/l.php?u=https%3A%2F%2Fnphadmin.wufoo.com%2Fforms%2Fq191z0tm1osxnnx%2F%3Ffbclid%3DIwAR2HHQ0erDRLxKU48x4UjWuhvW5aRFHR8BMPYMhNCmfxrkzdc9HE-s4lgtw&h=AT1yb3_5bBntRnjrVvL5bZQX6mzCXcwTO3tslrzYzZBdMxpbKd9LXCvUJujs4AjyldrZRJNdw4KpBZ8O8o8tqQ0s8zcqLDXipr8SUtTylo0MJVsMqUE254YT2mVWST0_f3krs4Wy9zjbnYWiFtuNcbC_V1QEl--Dll0WitiGhK2E9NZtZsre8joXpNGajKc6TKF3PQRovbdxbcm5pt12Ks6bUY2u9JRZoUJ8HvqV8e0-7XaKmklBsGGYFv66eqWy7rOwyOVEH8htk6hx9wj20bYelLMDOk9QgX5wIrHzMuJSd0FNKE1pCiQQlAiyjYF3tSV-pePLutb5c80TA8OZWj3lRvGyQkoEUrEHqS53SmF_P547WM0hQy78RWpVqLS9LNkf3WkmyB2V2ehE_d0MiwU1OuruW_hju6Y3dqWr0Wz4EKeWQ_gKwjZb54vENdS87hGHtYCJYhHIGW-XxwMu28fK_vTSYsGLz6h0vqNF9bRRHdalODUwQiue-ljoXY_NhQhBfG3QF7dGkvOPhQSibjqrpx3Mb_m_5weplTHIoxm5cuLUZcQiik6jTySn0PBpIYdNP09AB_NkQgB-qz3lYlxosob92hqHksMWCnnxpFhYQ9HmPK-XcQVeUwfqA4pAXsLLwwj5-siUlCRTqy07FX3E0uzCG1ENm_0IhcMFM3gke5t0wDiQqY-Qh38COZ_CDET57o4rdmIOH3qGw4LMfs6aGmLjom6tK9DEcV2vv09pb9vwRKq5XN-zx4EPvE0p1HqV2Qp-EKsR6CMHcGabB3RLrJOxiwQVSIES69oy2bqofcu-0rFmrn3vAUq2TPhi6rZN1IHSfP1QVRYsR6CPNJEv88Ys582XuhRVM_XWmDdM8KnhRRQne4XlmgyjCLF9Xgs1rpS-zYhlj3Fbfl4"><h3>Learn More</h3></a>
+
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                 </div>
 
             </div>
