--- a/PawsClaws/Pages/About.cshtml
+++ b/PawsClaws/Pages/About.cshtml
@@ -142,7 +142,8 @@
                     </div>
                 </div>
 
-                <div class="row">                
+                <div class="row">   
+                   <!--First column-->
                         <div class="col-md-6">
                             <div class="flex-sm-row">
                                 <div class="flex-sm-column">
@@ -154,6 +155,7 @@
                                 </div>
                             </div>
 
+                            <!--image row-->
                             <div class="flex-sm-row">
                                 <div class="flex-sm-column">
                                     <div class="justify-content-md-start">
@@ -164,6 +166,7 @@
                                 </div>
                             </div>
 
+                            <!--description row-->
                             <div class="flex-sm-row">
                                 <div class="flex-sm-column">
                                     <div class="justify-content-md-start">
@@ -181,6 +184,7 @@
                             </div>
                         </div>
 
+                    <!--Secind column-->
                         <div class="col-md-6">
                             <div class="flex-sm-row">
                                 <div class="flex-sm-column">
@@ -191,7 +195,8 @@
                                     </div>
                                 </div>
                             </div>
-                            
+
+                            <!--image row-->
                             <div class="flex-sm-row">
                                 <div class="flex-sm-column">
                                     <div class="justify-content-md-start">
@@ -202,6 +207,7 @@
                                 </div>
                             </div>
 
+                            <!--description row-->
                             <div class="flex-sm-row">
                                 <div class="flex-sm-column">
                                     <div class="justify-content-md-start">
